force-app/main/default/objects/Prompt_Config__mdt/Prompt_Config__mdt.object-meta.xml
<CustomObject>
    <label>Prompt Config</label>
    <pluralLabel>Prompt Configs</pluralLabel>
</CustomObject>