force-app/main/default/objects/Prompt_Config__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object_Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>