force-app/main/default/objects/Prompt_Config__mdt/fields/Prompt_Text__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Text__c</fullName>
    <label>Prompt_Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>