force-app/main/default/objects/Prompt_Config__mdt/fields/Prompt_Type__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Type__c</fullName>
    <label>Prompt_Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>